y.output

state 0
	$accept: .program $end 

	VAR  shift 7
	FUNC  shift 6
	EOL  shift 3
	.  error

	program  goto 1
	define_or_state  goto 2
	function_decl  goto 4
	global_decl  goto 5

state 1
	$accept:  program.$end 
	program:  program.define_or_state 

	$end  accept
	VAR  shift 7
	FUNC  shift 6
	EOL  shift 3
	.  error

	define_or_state  goto 8
	function_decl  goto 4
	global_decl  goto 5

state 2
	program:  define_or_state.    (1)

	.  reduce 1 (src line 68)


state 3
	define_or_state:  EOL.    (3)

	.  reduce 3 (src line 72)


state 4
	define_or_state:  function_decl.    (4)

	.  reduce 4 (src line 74)


state 5
	define_or_state:  global_decl.    (5)

	.  reduce 5 (src line 75)


state 6
	function_decl:  FUNC.IDENTIFIER '(' arg_list ')' function_type '{' statements '}' 

	IDENTIFIER  shift 9
	.  error


state 7
	global_decl:  VAR.IDENTIFIER var_type 
	global_decl:  VAR.IDENTIFIER var_type ASSIGN uni_expr 
	global_decl:  VAR.IDENTIFIER ASSIGN uni_expr 

	IDENTIFIER  shift 10
	.  error


state 8
	program:  program define_or_state.    (2)

	.  reduce 2 (src line 70)


state 9
	function_decl:  FUNC IDENTIFIER.'(' arg_list ')' function_type '{' statements '}' 

	'('  shift 11
	.  error


state 10
	global_decl:  VAR IDENTIFIER.var_type 
	global_decl:  VAR IDENTIFIER.var_type ASSIGN uni_expr 
	global_decl:  VAR IDENTIFIER.ASSIGN uni_expr 

	ASSIGN  shift 13
	INT  shift 14
	FLOAT  shift 15
	STRING  shift 16
	.  error

	var_type  goto 12

state 11
	function_decl:  FUNC IDENTIFIER '('.arg_list ')' function_type '{' statements '}' 
	arg_decl: .    (12)

	IDENTIFIER  shift 19
	.  reduce 12 (src line 89)

	arg_decl  goto 18
	arg_list  goto 17

state 12
	global_decl:  VAR IDENTIFIER var_type.    (6)
	global_decl:  VAR IDENTIFIER var_type.ASSIGN uni_expr 

	ASSIGN  shift 20
	.  reduce 6 (src line 77)


state 13
	global_decl:  VAR IDENTIFIER ASSIGN.uni_expr 

	INUM  shift 25
	FNUM  shift 26
	STRING_LITERAL  shift 24
	MINUS  shift 23
	.  error

	const  goto 22
	uni_expr  goto 21

state 14
	var_type:  INT.    (57)

	.  reduce 57 (src line 160)


state 15
	var_type:  FLOAT.    (58)

	.  reduce 58 (src line 162)


state 16
	var_type:  STRING.    (59)

	.  reduce 59 (src line 163)


state 17
	function_decl:  FUNC IDENTIFIER '(' arg_list.')' function_type '{' statements '}' 
	arg_list:  arg_list.',' arg_decl 

	')'  shift 27
	','  shift 28
	.  error


state 18
	arg_list:  arg_decl.    (10)

	.  reduce 10 (src line 85)


state 19
	arg_decl:  IDENTIFIER.var_type 

	INT  shift 14
	FLOAT  shift 15
	STRING  shift 16
	.  error

	var_type  goto 29

state 20
	global_decl:  VAR IDENTIFIER var_type ASSIGN.uni_expr 

	INUM  shift 25
	FNUM  shift 26
	STRING_LITERAL  shift 24
	MINUS  shift 23
	.  error

	const  goto 22
	uni_expr  goto 30

state 21
	global_decl:  VAR IDENTIFIER ASSIGN uni_expr.    (8)

	.  reduce 8 (src line 80)


state 22
	uni_expr:  const.    (51)

	.  reduce 51 (src line 150)


state 23
	uni_expr:  MINUS.INUM 
	uni_expr:  MINUS.FNUM 

	INUM  shift 31
	FNUM  shift 32
	.  error


state 24
	const:  STRING_LITERAL.    (54)

	.  reduce 54 (src line 155)


state 25
	const:  INUM.    (55)

	.  reduce 55 (src line 157)


state 26
	const:  FNUM.    (56)

	.  reduce 56 (src line 158)


state 27
	function_decl:  FUNC IDENTIFIER '(' arg_list ')'.function_type '{' statements '}' 
	function_type: .    (60)

	INT  shift 34
	FLOAT  shift 35
	STRING  shift 36
	VOID  shift 37
	.  reduce 60 (src line 165)

	function_type  goto 33

state 28
	arg_list:  arg_list ','.arg_decl 
	arg_decl: .    (12)

	IDENTIFIER  shift 19
	.  reduce 12 (src line 89)

	arg_decl  goto 38

state 29
	arg_decl:  IDENTIFIER var_type.    (13)

	.  reduce 13 (src line 91)


state 30
	global_decl:  VAR IDENTIFIER var_type ASSIGN uni_expr.    (7)

	.  reduce 7 (src line 79)


state 31
	uni_expr:  MINUS INUM.    (52)

	.  reduce 52 (src line 152)


state 32
	uni_expr:  MINUS FNUM.    (53)

	.  reduce 53 (src line 153)


state 33
	function_decl:  FUNC IDENTIFIER '(' arg_list ')' function_type.'{' statements '}' 

	'{'  shift 39
	.  error


state 34
	function_type:  INT.    (61)

	.  reduce 61 (src line 167)


state 35
	function_type:  FLOAT.    (62)

	.  reduce 62 (src line 168)


state 36
	function_type:  STRING.    (63)

	.  reduce 63 (src line 169)


state 37
	function_type:  VOID.    (64)

	.  reduce 64 (src line 170)


state 38
	arg_list:  arg_list ',' arg_decl.    (11)

	.  reduce 11 (src line 87)


state 39
	function_decl:  FUNC IDENTIFIER '(' arg_list ')' function_type '{'.statements '}' 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 47
	STRING_LITERAL  shift 24
	MINUS  shift 49
	VAR  shift 52
	RETURN  shift 53
	EOL  shift 42
	'('  shift 51
	.  error

	statement  goto 41
	expr  goto 44
	assign  goto 43
	const  goto 48
	define_var  goto 45
	function_call  goto 50
	return_statement  goto 46
	statements  goto 40

state 40
	function_decl:  FUNC IDENTIFIER '(' arg_list ')' function_type '{' statements.'}' 
	statements:  statements.statement 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 47
	STRING_LITERAL  shift 24
	MINUS  shift 49
	VAR  shift 52
	RETURN  shift 53
	EOL  shift 42
	'('  shift 51
	'}'  shift 54
	.  error

	statement  goto 55
	expr  goto 44
	assign  goto 43
	const  goto 48
	define_var  goto 45
	function_call  goto 50
	return_statement  goto 46

state 41
	statements:  statement.    (14)

	.  reduce 14 (src line 93)


state 42
	statement:  EOL.    (16)

	.  reduce 16 (src line 97)


state 43
	statement:  assign.EOL 

	EOL  shift 56
	.  error


state 44
	statement:  expr.EOL 
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	PLUS  shift 60
	MINUS  shift 61
	ASTARISK  shift 62
	SLASH  shift 63
	PERCENT  shift 64
	EQ  shift 65
	NEQ  shift 66
	GT  shift 67
	GE  shift 68
	LT  shift 69
	LE  shift 70
	AND  shift 71
	OR  shift 72
	INCR  shift 58
	DECR  shift 59
	EOL  shift 57
	.  error


state 45
	statement:  define_var.EOL 

	EOL  shift 73
	.  error


state 46
	statement:  return_statement.EOL 

	EOL  shift 74
	.  error


state 47
	assign:  IDENTIFIER.ASSIGN expr 
	expr:  IDENTIFIER.    (29)
	function_call:  IDENTIFIER.'(' args ')' 

	ASSIGN  shift 75
	'('  shift 76
	.  reduce 29 (src line 123)


state 48
	expr:  const.    (27)

	.  reduce 27 (src line 120)


state 49
	expr:  MINUS.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 77
	const  goto 48
	function_call  goto 50

state 50
	expr:  function_call.    (30)

	.  reduce 30 (src line 124)


state 51
	expr:  '('.expr ')' 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 79
	const  goto 48
	function_call  goto 50

state 52
	define_var:  VAR.IDENTIFIER var_type 
	define_var:  VAR.IDENTIFIER var_type ASSIGN expr 
	define_var:  VAR.IDENTIFIER ASSIGN expr 

	IDENTIFIER  shift 80
	.  error


state 53
	return_statement:  RETURN.    (24)
	return_statement:  RETURN.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  reduce 24 (src line 109)

	expr  goto 81
	const  goto 48
	function_call  goto 50

state 54
	function_decl:  FUNC IDENTIFIER '(' arg_list ')' function_type '{' statements '}'.    (9)

	.  reduce 9 (src line 82)


state 55
	statements:  statements statement.    (15)

	.  reduce 15 (src line 95)


state 56
	statement:  assign EOL.    (17)

	.  reduce 17 (src line 99)


state 57
	statement:  expr EOL.    (18)

	.  reduce 18 (src line 100)


state 58
	expr:  expr INCR.    (31)

	.  reduce 31 (src line 125)


state 59
	expr:  expr DECR.    (32)

	.  reduce 32 (src line 126)


state 60
	expr:  expr PLUS.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 82
	const  goto 48
	function_call  goto 50

state 61
	expr:  expr MINUS.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 83
	const  goto 48
	function_call  goto 50

state 62
	expr:  expr ASTARISK.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 84
	const  goto 48
	function_call  goto 50

state 63
	expr:  expr SLASH.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 85
	const  goto 48
	function_call  goto 50

state 64
	expr:  expr PERCENT.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 86
	const  goto 48
	function_call  goto 50

state 65
	expr:  expr EQ.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 87
	const  goto 48
	function_call  goto 50

state 66
	expr:  expr NEQ.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 88
	const  goto 48
	function_call  goto 50

state 67
	expr:  expr GT.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 89
	const  goto 48
	function_call  goto 50

state 68
	expr:  expr GE.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 90
	const  goto 48
	function_call  goto 50

state 69
	expr:  expr LT.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 91
	const  goto 48
	function_call  goto 50

state 70
	expr:  expr LE.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 92
	const  goto 48
	function_call  goto 50

state 71
	expr:  expr AND.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 93
	const  goto 48
	function_call  goto 50

state 72
	expr:  expr OR.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 94
	const  goto 48
	function_call  goto 50

state 73
	statement:  define_var EOL.    (19)

	.  reduce 19 (src line 101)


state 74
	statement:  return_statement EOL.    (20)

	.  reduce 20 (src line 102)


state 75
	assign:  IDENTIFIER ASSIGN.expr 

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  error

	expr  goto 95
	const  goto 48
	function_call  goto 50

state 76
	function_call:  IDENTIFIER '('.args ')' 
	args: .    (48)

	INUM  shift 25
	FNUM  shift 26
	IDENTIFIER  shift 78
	STRING_LITERAL  shift 24
	MINUS  shift 49
	'('  shift 51
	.  reduce 48 (src line 145)

	expr  goto 97
	const  goto 48
	function_call  goto 50
	args  goto 96

state 77
	expr:  MINUS expr.    (28)
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	.  reduce 28 (src line 122)


state 78
	expr:  IDENTIFIER.    (29)
	function_call:  IDENTIFIER.'(' args ')' 

	'('  shift 76
	.  reduce 29 (src line 123)


state 79
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  '(' expr.')' 

	PLUS  shift 60
	MINUS  shift 61
	ASTARISK  shift 62
	SLASH  shift 63
	PERCENT  shift 64
	EQ  shift 65
	NEQ  shift 66
	GT  shift 67
	GE  shift 68
	LT  shift 69
	LE  shift 70
	AND  shift 71
	OR  shift 72
	INCR  shift 58
	DECR  shift 59
	')'  shift 98
	.  error


state 80
	define_var:  VAR IDENTIFIER.var_type 
	define_var:  VAR IDENTIFIER.var_type ASSIGN expr 
	define_var:  VAR IDENTIFIER.ASSIGN expr 

	ASSIGN  shift 100
	INT  shift 14
	FLOAT  shift 15
	STRING  shift 16
	.  error

	var_type  goto 99

state 81
	return_statement:  RETURN expr.    (25)
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	PLUS  shift 60
	MINUS  shift 61
	ASTARISK  shift 62
	SLASH  shift 63
	PERCENT  shift 64
	EQ  shift 65
	NEQ  shift 66
	GT  shift 67
	GE  shift 68
	LT  shift 69
	LE  shift 70
	AND  shift 71
	OR  shift 72
	INCR  shift 58
	DECR  shift 59
	.  reduce 25 (src line 111)


state 82
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr PLUS expr.    (33)
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	ASTARISK  shift 62
	SLASH  shift 63
	PERCENT  shift 64
	INCR  shift 58
	DECR  shift 59
	.  reduce 33 (src line 127)


state 83
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr MINUS expr.    (34)
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	ASTARISK  shift 62
	SLASH  shift 63
	PERCENT  shift 64
	INCR  shift 58
	DECR  shift 59
	.  reduce 34 (src line 128)


state 84
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr ASTARISK expr.    (35)
	expr:  expr.SLASH expr 
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	INCR  shift 58
	DECR  shift 59
	.  reduce 35 (src line 129)


state 85
	expr:  expr.INCR 
	expr:  expr.DECR 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.ASTARISK expr 
	expr:  expr.SLASH expr 
	expr:  expr SLASH expr.    (36)
	expr:  expr.PERCENT expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
